Deshabilitando botones y mostrando mensajes al submitear forms

--- a/server/app/templates/base.html
+++ b/server/app/templates/base.html
@@ -15,6 +15,7 @@
     <script src="{{ url_for('static', filename='js/questions/delete.js') }}"></script>
     <script src="{{ url_for('static', filename='js/questions/edit.js') }}"></script>
     <script src="{{ url_for('static', filename='js/questions/tags.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/forms.js') }}"></script>
     <script src="{{ url_for('static', filename='js/jgm.js') }}"></script>
     {% block head %}{% endblock %}
   </head>
