--- a/server/app/templates/forms/full_text_query.html
+++ b/server/app/templates/forms/full_text_query.html
@@ -14,7 +14,7 @@
                     {{ render_field(form.main_text) }}
                 </div>
 
-                <input type=submit value=Buscar class="btn btn-success">
+                <input type=submit value=Buscar class="btn btn-success btn-sm">
             </form>
         </div>
     </div>
