--- a/server/app/templates/forms/process_spreadsheet.html
+++ b/server/app/templates/forms/process_spreadsheet.html
@@ -123,7 +123,7 @@
                     </div>
 
                     <div class="col-xs-12 no-padding submit-container">
-                        <input type=submit value="Procesar" class="btn btn-success">
+                        <input id="submit-btn" type=submit value="Procesar" class="btn btn-success btn-sm">
                     </div>
 
                 </div>
