--- a/server/app/templates/forms/question_edit.html
+++ b/server/app/templates/forms/question_edit.html
@@ -12,8 +12,8 @@
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-success">Guardar Cambios</button>
+                <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-success btn-sm">Guardar Cambios</button>
             </div>
         </div>
     </div>
