--- a/server/app/templates/forms/question_upload_form.html
+++ b/server/app/templates/forms/question_upload_form.html
@@ -24,7 +24,7 @@
                     <p>Seleccione una planilla (formatos soportados: csv)</p>
                     <input class="" id="spreadsheet" name="spreadsheet" type="file">
                 </div>
-                <input type=submit value="Subir" class="btn btn-success">
+                <input id="submit-btn" type=submit value="Subir" class="btn btn-success btn-sm">
             </form>
         </div>
     </div>
