--- a/server/app/templates/forms/single_question_form.html
+++ b/server/app/templates/forms/single_question_form.html
@@ -59,7 +59,7 @@
                 </div>
 
 
-                <input type=submit value=Guardar class="btn btn-success">
+                <input id="submit-btn" type=submit value=Guardar class="btn btn-success btn-sm">
             </form>
         </div>
     </div>
