--- a/server/app/templates/search/filters.html
+++ b/server/app/templates/search/filters.html
@@ -15,7 +15,7 @@
         {% endif %}
         {% if query.can_add_more_filters %}
             <div class="col-xs-12">
-                <button type="button" class="btn btn-success add-filter">
+                <button type="button" class="btn btn-success btn-sm add-filter">
                     <i class="fa fa-filter" aria-hidden="true"></i> Agregar filtro
                 </button>
             </div>
