--- a/server/app/static/style/app.css
+++ b/server/app/static/style/app.css
@@ -2359,6 +2359,8 @@
 
 button {
   outline: none !important; }
+  button.no-actions {
+    pointer-events: none; }
 
 .no-padding {
   padding: 0; }
