--- a/server/app/templates/forms/process_spreadsheet.html
+++ b/server/app/templates/forms/process_spreadsheet.html
@@ -31,6 +31,15 @@
 
                     <div class="col-xs-12 no-padding">
                         <div class="col-xs-12 col-sm-6 field-label-container">
+                            {{ process_spreadsheet_form.report.label() }}
+                        </div>
+                        <div class="col-xs-12 col-sm-6">
+                            {{ process_spreadsheet_form.report(class_='form-control') }}
+                        </div>
+                    </div>
+
+                    <div class="col-xs-12 no-padding">
+                        <div class="col-xs-12 col-sm-6 field-label-container">
                             {{ process_spreadsheet_form.number.label() }}
                         </div>
                         <div class="col-xs-12 col-sm-6">
@@ -40,10 +49,10 @@
 
                     <div class="col-xs-12 no-padding">
                         <div class="col-xs-12 col-sm-6 field-label-container">
-                            {{ process_spreadsheet_form.report.label() }}
+                            {{ process_spreadsheet_form.context.label() }}
                         </div>
                         <div class="col-xs-12 col-sm-6">
-                            {{ process_spreadsheet_form.report(class_='form-control') }}
+                            {{ process_spreadsheet_form.context(class_='form-control') }}
                         </div>
                     </div>
 
@@ -76,15 +85,6 @@
 
                     <div class="col-xs-12 no-padding">
                         <div class="col-xs-12 col-sm-6 field-label-container">
-                            {{ process_spreadsheet_form.context.label() }}
-                        </div>
-                        <div class="col-xs-12 col-sm-6">
-                            {{ process_spreadsheet_form.context(class_='form-control') }}
-                        </div>
-                    </div>
-
-                    <div class="col-xs-12 no-padding">
-                        <div class="col-xs-12 col-sm-6 field-label-container">
                             {{ process_spreadsheet_form.topic.label() }}
                         </div>
                         <div class="col-xs-12 col-sm-6">
@@ -110,13 +110,8 @@
                         </div>
                     </div>
 
-                    <script>
-                        window.jgm = window.jgm || {};
-                        window.jgm.spreadsheet_summary = {
-                            best_row: {{ spreadsheet_summary.best_row|tojson|safe }}
-                        };
-                    </script>
                     <div class="col-xs-12 no-padding preview-container">
+                        <h5>Previsualización</h5>
                         {% with result = {}, hide_more_info_link = True, hide_actions = True %}
                             {% include 'search/result.html' %}
                         {% endwith %}
@@ -133,14 +128,24 @@
 
     <script>
         $(function () {
-            $('.process-spreadsheet-form select').on('change', function (e) {
-                var selects = $('.process-spreadsheet-form select');
-                var question = {};
+            var bestRowFromSpreadsheet = {{ spreadsheet_summary.best_row|tojson|safe }};
+            var selects = $('.process-spreadsheet-form select');
+            selects.on('change', function () {
                 for (var i=0; i<selects.length; i++) {
-                    var select = $(selects[i]);
-                    question[select.attr('id')] = parseInt(select.find('option:selected').val());
+                    var $select = $(selects[i]);
+                    var attributeName = $select.attr('id');
+                    var $attributePreviewElement = $('.result [data-attribute-name="' + attributeName + '"]');
+                    var attributeColumnNumber = parseInt($select.find('option:selected').val());
+                    var attributeValue;
+                    if (attributeColumnNumber > -1) {
+                        var valueTemplate = $attributePreviewElement.data('attribute-display-template');
+                        attributeValue = valueTemplate.replace('$', bestRowFromSpreadsheet[attributeColumnNumber]);
+
+                    } else {
+                        attributeValue = $attributePreviewElement.data('attribute-default');
+                    }
+                    $attributePreviewElement.html(attributeValue);
                 }
-                console.log(question);
             })
         })
     </script>
