Agrego la busqueda por el text-classifier tambien en el campo contexto, renombro campos y elimino justificacion

--- a/server/app/templates/search/filters.html
+++ b/server/app/templates/search/filters.html
@@ -121,7 +121,7 @@
                 var newArgs = currentArgs();
                 var translations = {
                     'report': 'informe', 'author': 'autor', 'topic': 'tema',
-                    'subtopic': 'subtema', 'answerer': 'oranismo-requerido'
+                    'subtopic': 'subtema', 'answerer': 'organismo-requerido'
                 }
                 newArgs[translations[selectedFilterName]] = selectedFilterValue;
                 var newHref = urlConstructor(newArgs);
