Highlight en contexto + tener en cuenta palabras con acentos

--- a/server/app/static/style/app.scss
+++ b/server/app/static/style/app.scss
@@ -60,7 +60,10 @@ button {
   padding: 0;
 }
 
-.highlight { background-color: yellow }
+mark {
+  background-color: yellow;
+  padding: 0;
+}
 
 @import 'search';
 @import 'question';
