--- a/server/app/templates/base.html
+++ b/server/app/templates/base.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style/app.css') }}">
     <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='img/favicon.ico') }}" />
     <script src="{{ url_for('static', filename='js/libs/jquery-3.1.0.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/libs/jquery.highlight.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/libs/jquery.mark.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/libs/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/libs/jquery.qtip.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/libs/select2.min.js') }}"></script>
