--- a/server/app/templates/search/result.html
+++ b/server/app/templates/search/result.html
@@ -52,7 +52,7 @@
                 </span>
             </p>
 
-            <p class="text-muted"
+            <p class="text-muted question-context"
                data-attribute-name="context"
                data-attribute-default="Sin contexto"
                data-attribute-display-template="Contexto: $">
