Extiendo limite para form de busqueda y oculto boton de edicion

--- a/server/app/templates/search/result.html
+++ b/server/app/templates/search/result.html
@@ -15,7 +15,7 @@
 
             <div class="question-actions">
                 {% if not hide_actions %}
-                    <span class="edit">
+                    <span class="edit hidden">
                         <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                         editar
                     </span>
