--- a/server/app/static/style/forms.scss
+++ b/server/app/static/style/forms.scss
@@ -1,7 +1,6 @@
-.process-spreadsheet-form {
-  form {
-    margin-bottom: 20px;
-  }
+form#upload_form {
+  margin-bottom: 20px;
+
   .field-label-container {
     padding-top: 6px;
     padding-bottom: 6px;
