--- a/server/app/templates/search/results_list.html
+++ b/server/app/templates/search/results_list.html
@@ -15,5 +15,5 @@
 
     {% include 'search/pagination.html' %}
 
-    {% include 'forms/question_edit.html' %}
+    {% include 'forms/question_edit_modal.html' %}
 </section>
