Fix bug - preview de preguntas en form de procesamiento de planilla

--- a/server/app/templates/forms/process_spreadsheet.html
+++ b/server/app/templates/forms/process_spreadsheet.html
@@ -99,7 +99,7 @@
     <script>
         $(function () {
             var bestRowFromSpreadsheet = {{ spreadsheet_summary.best_row|tojson|safe }};
-            var selects = $('.process-spreadsheet-form select');
+            var selects = $('form select');
             selects.on('change', function () {
                 for (var i = 0; i < selects.length; i++) {
                     var $select = $(selects[i]);
