Aumento limite de textos y traduzco cosas que estaban en ingles

--- a/server/app/templates/search/filters.html
+++ b/server/app/templates/search/filters.html
@@ -120,8 +120,8 @@
                 var link= $('#search-filters #apply-filter');
                 var newArgs = currentArgs();
                 var translations = {
-                    'report': 'informe', 'author': 'autor',
-                    'topic': 'tema', 'subtopic': 'subtema'
+                    'Informe': 'informe', 'Autor': 'autor',
+                    'Ministerio': 'tema', 'Área de Gestión': 'subtema'
                 };
                 newArgs[translations[selectedFilterName]] = selectedFilterValue;
                 var newHref = urlConstructor(newArgs);
