--- a/server/app/templates/search/filters.html
+++ b/server/app/templates/search/filters.html
@@ -25,7 +25,7 @@
         {% endfor %}
 
 
-        {% if query.can_add_more_filters %}
+        {% if query.can_add_more_filters and results['pagination']['total_results'] > 0 %}
             <div class="col-xs-12 add-filter-container">
                 <button type="button" class="btn btn-success btn-sm add-filter">
                     <i class="fa fa-filter" aria-hidden="true"></i> Agregar filtro
